# lens

./: .gitignore  BENCHMARKS.md  BENCHMARKS_APPENDIX.md  COMPETITIVE_ANALYSIS.md  CONTEXT_FORGE_PLAN.md  CTXFORGE_BENCHMARK_PLAN.md  CTXFORGE_CLEAN_REPORT_PLAN.md  CTXFORGE_OBSERVABILITY_PLAN.md  CTXFORGE_ROUTING_PLAN.md  CTXFORGE_RTK_PLAN.md  CTXFORGE_SAVINGS_IMPROVEMENT_PLAN.md  CTXFORGE_SESSION_CONTINUITY_PLAN.md  Cargo.toml  DECISIONS.md  FEATURES.md  LENS_BENCHMARK_PLAN.md  LENS_CLEAN_REPORT_PLAN.md  LENS_OBSERVABILITY_PLAN.md  LENS_PLAN.md  LENS_ROUTING_PLAN.md  LENS_RTK_PLAN.md  LENS_SAVINGS_IMPROVEMENT_PLAN.md  LENS_SESSION_CONTINUITY_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  RTK_NOTES.md  SECURITY.md  SUPPORTED.md  THIRD-PARTY-LICENSES.md  install.sh  setup.sh
.cargo/: config.toml
.claude/: lessons.md
.ctxforge/: index.db  session.db  store.db
.github/workflows/: ci.yml  release.yml
assets/commands/: dashboard.md  warmup.md
benchmarks/: README.md
benchmarks/acceptance/: fetch_corpus.sh  run_acceptance.rs  thresholds.json
benchmarks/accuracy/: harness.rs
benchmarks/accuracy/fixtures/: config.yaml  events.jsonl  metrics.csv
benchmarks/accuracy/fixtures/findloc_bordA/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_bordB/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_bordC/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_bordD/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_maxA/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_maxB/: core.rs  decoys.rs
benchmarks/accuracy/fixtures/findloc_nullA/: core.rs
benchmarks/accuracy/fixtures/findloc_nullB/: core.rs
benchmarks/accuracy/fixtures/findloc_nullC/: core.rs
benchmarks/accuracy/fixtures/overview_knapsack/: repo.rs
benchmarks/accuracy/fixtures/recall_span/: dist_a.rs  dist_b.rs  dist_c.rs  dist_d.rs  dist_e.rs  dist_f.rs  noise_00.rs  noise_01.rs  noise_02.rs  noise_03.rs  noise_04.rs  noise_05.rs  noise_06.rs  noise_07.rs  noise_08.rs  noise_09.rs  noise_10.rs  noise_11.rs  noise_12.rs  noise_13.rs  target_quorum.rs
benchmarks/accuracy/fixtures/repo/: auth.rs  crypto.rs  db.rs  handlers.rs  main.rs
benchmarks/accuracy/fixtures/skeleton/: service.rs
benchmarks/accuracy/results/: mock.json  real.json
benchmarks/accuracy/tasks/: 0001_count_error_types.json  0002_count_connection_timeouts.json  0003_max_latency.json  0004_total_requests.json  0005_count_timeout_events.json  0006_busiest_endpoint.json  0007_defines_connect_db.json  0008_reachable_path.json  0009_kind_of_connection.json  0010_defines_rotate_keys.json  0011_default_port.json  0012_skeleton_return_type.json  0013_skeleton_method.json  0014_overview_dropped_hub.json  0015_shard_checkpoint_marker.json  0016_findloc_maxA.json  0017_findloc_maxB.json  0018_findloc_bordA.json  0019_findloc_bordB.json  0020_findloc_bordC.json  0021_findloc_nullA.json  0022_findloc_nullB.json  0023_findloc_nullC.json  0024_findloc_bordD.json
benchmarks/adoption/: run_adoption.sh
benchmarks/calibration/: run_calibration.rs
benchmarks/calibration/expected/: calibration.json
benchmarks/calibration/fixtures/python/: sample.py
benchmarks/changes/: run_changes.rs  run_subword.rs
benchmarks/changes/expected/: baseline.json
benchmarks/changes/fixtures/calls/: a.rs  b.rs  c.rs  d.rs  e.rs  shared.rs
benchmarks/changes/fixtures/imports/: lib.rs  shared.rs
benchmarks/changes/fixtures/knapsack/: repo.rs
benchmarks/changes/fixtures/overview/: repo.rs
benchmarks/changes/fixtures/proximity_span/: codec_notes.rs  frame_reader.rs  noise_alpha.rs  noise_beta.rs  noise_delta.rs  noise_epsilon.rs  noise_gamma.rs  noise_zeta.rs
benchmarks/changes/fixtures/rank/: alpha.rs  beta.rs  decoys.rs  gamma.rs  hubs.rs
benchmarks/changes/fixtures/search/: cart.rs  codec.rs  ledger.rs  limiter.rs  math.rs  notes_checkout.rs  notes_marshal.rs  notes_reconcile.rs  notes_throttle.rs  notes_tokenize.rs  parser.rs
benchmarks/changes/fixtures/structural/: sample.rs
benchmarks/changes/fixtures/subword/: auth.ts  billing.tsx  cache.rs  dashboard.rs  (+6 more)
benchmarks/common/: accuracy.rs  navigation.rs  recovery.rs  savings.rs
benchmarks/fitness/: run_fitness.rs
benchmarks/fitness/expected/: baseline.json
benchmarks/hotpaths/: run_hotpaths.rs
benchmarks/navigation/: run_navigation.rs
benchmarks/navigation/expected/: navigation.json
benchmarks/prove/: run_prove.rs
benchmarks/recovery/: harness.rs
benchmarks/recovery/results/: mock.json  real.json
benchmarks/recovery/scenarios/: ed_01_unresolved_error.json  ed_02_use_instead.json  ed_03_constraint.json  ed_04_blocker.json  ft_01_active_file.json  ft_02_task_inprogress.json  ft_03_last_file_of_many.json  ft_04_continue_file.json
benchmarks/report/: generate_report.rs
benchmarks/routing/: run_routing.rs
benchmarks/savings/: run_savings.rs  scale_curve.rs
benchmarks/savings/expected/: savings.json
benchmarks/tuning/: run_tuning.rs
benchmarks/tuning/results/: FINDINGS.md  ab_build.json  ab_build_real.json  baseline.json
benchmarks/value/: run_value.rs
documentation/: architecture.md  automation.md  flows.md  permissions.md  variables.md
npm/lens-mcp/: README.md  package.json
npm/scripts/: build-packages.mjs
scripts/: fetch_bench_corpus.sh
src/: lib.rs  main.rs  server.rs  setup.rs  tools.rs  warmup.rs  wrap.rs
src/darkroom/: mod.rs  runtimes.rs
src/discovery/: extract.rs  graph.rs  mod.rs  query.rs  skeleton.rs  structural.rs  tags_adapter.rs
src/index/: mod.rs  schema.rs  tantivy_index.rs
src/obs/: dashboard.rs  mod.rs  stats.rs  tui.rs  value_model.rs  verify.rs
src/routing/: classify.rs  log.rs  mod.rs  throttle.rs
src/rtk/: gain.rs  install.rs  mod.rs
src/sandbox/: mod.rs
src/session/: extract.rs  hook.rs  install.rs  mod.rs  snapshot.rs  store.rs
src/store/: compress.rs  mod.rs
tests/: discovery_tests.rs  e2e_tests.rs  index_concurrency.rs  index_tests.rs  observability_tests.rs  routing_tests.rs  rtk_tests.rs  runtime_responsiveness.rs  sandbox_tests.rs  session_tests.rs  store_tests.rs  tool_errors.rs
(+20 files in other folders)
