[package]
name = "lens"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A token-saving MCP server: darkroom execution, FTS5 search, tree-sitter code graph, reversible compression."

[[bin]]
name = "lens"
path = "src/main.rs"

# --- Benchmark suite (see benchmarks/). These reuse the library crate and the
# existing dependencies only; real Anthropic calls shell out to `curl`, so no new
# dependency enters the production binary. ---
[[bin]]
name = "bench_savings"
path = "benchmarks/savings/run_savings.rs"

[[bin]]
name = "bench_scale_curve"
path = "benchmarks/savings/scale_curve.rs"

[[bin]]
name = "bench_navigation"
path = "benchmarks/navigation/run_navigation.rs"

[[bin]]
name = "bench_prove"
path = "benchmarks/prove/run_prove.rs"

[[bin]]
name = "bench_value"
path = "benchmarks/value/run_value.rs"

[[bin]]
name = "bench_accuracy"
path = "benchmarks/accuracy/harness.rs"

[[bin]]
name = "bench_recovery"
path = "benchmarks/recovery/harness.rs"

[[bin]]
name = "bench_report"
path = "benchmarks/report/generate_report.rs"

[[bin]]
name = "bench_changes"
path = "benchmarks/changes/run_changes.rs"

[[bin]]
name = "bench_routing"
path = "benchmarks/routing/run_routing.rs"

[[bin]]
name = "bench_hotpaths"
path = "benchmarks/hotpaths/run_hotpaths.rs"

[[bin]]
name = "bench_fitness"
path = "benchmarks/fitness/run_fitness.rs"

[[bin]]
name = "bench_tuning"
path = "benchmarks/tuning/run_tuning.rs"

[[bin]]
name = "bench_calibration"
path = "benchmarks/calibration/run_calibration.rs"

[[bin]]
name = "bench_acceptance"
path = "benchmarks/acceptance/run_acceptance.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
streaming-iterator = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
walkdir = "2"
ignore = "0.4"
schemars = "1.0"
tempfile = "3"
regex = "1"
aho-corasick = "1"
shell-words = "1"
tree-sitter-swift = "0.6"
# --- Broad language support: tags-adapter grammars (T4-T8). Each wave owns a
# block; adding these trips bench_fitness G2 (dep_count), refrozen at T10. ---
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
# vendor-tags: these ship queries/tags.scm but do not const-export it; lens
# include_str!s a committed copy (see src/discovery/vendored/).
tree-sitter-kotlin-sg = "0.4"
tree-sitter-scala = "0.26"
# hand-query: no tags.scm shipped; lens authors a small tags-shaped def/call query.
tree-sitter-bash = "0.25"
foldhash = "0.1"
rayon = "1"
# Offline BPE tokenizer (vocab embedded in the crate; no network) for accurate
# token-count estimates instead of the bytes/4 heuristic.
tiktoken-rs = "0.6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# Client + child-process transport are only needed by the e2e test harness.
rmcp = { version = "1.7", features = ["client", "transport-child-process", "transport-io", "macros"] }
